tests/fixtures/invalid/bytes_pow_bool.py
# Cannot power Bytes and Bool
x: bytes = b"hello" ** True
